quicklog/tests/failures/trailing_comma2.rs
use quicklog::info;

fn main() {
    info!(some_field = 1, another_field = 2,);
}
